--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.1",
     "eslint": "^8.45.0",
     "eslint-config-next": "^13.4.12",
     "mongoose": "^7.4.3",
@@ -24,6 +25,7 @@
     "typescript": "^5.1.6"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.3"
+    "@tailwindcss/forms": "^0.5.3",
+    "@types/bcrypt": "^5.0.0"
   }
 }
