--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "^20.4.5",
+    "@types/node": "^20.8.5",
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
-    "autoprefixer": "10.4.14",
+    "autoprefixer": "^10.4.16",
     "bcrypt": "^5.1.1",
     "eslint": "^8.45.0",
     "eslint-config-next": "^13.4.12",
-    "mongoose": "^7.4.3",
+    "mongoose": "^7.6.2",
     "next": "^13.4.12",
     "next-auth": "^4.23.1",
     "postcss": "^8.4.27",
